--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-removed.adoc
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-removed.adoc
@@ -28,6 +28,11 @@
 | `OCIS_LDAP_BIND_PASSWORD`
 | Password to use for authenticating the 'bind_dn'.
 
+| xref:{s-path}/sharing.adoc[sharing]
+| `SHARING_EVENTS_TLS_ROOT_CA_CERT`
+| `SHARING_EVENTS_TLS_ROOT_CA_CERTIFICATE`
+| The root CA certificate used to validate the server's TLS certificate. If provided SHARING_EVENTS_TLS_INSECURE will be seen as false.
+
 | xref:{s-path}/users.adoc[users]
 | `LDAP_BIND_PASSWORD`
 | `OCIS_LDAP_BIND_PASSWORD`
@@ -36,5 +41,6 @@
 |
 | `LDAP_USER_SCHEMA_ID_IS_OCTETSTRING`
 | `OCIS_LDAP_USER_SCHEMA_ID_IS_OCTETSTRING`
-| Set this to true if the defined 'ID' attribute for users is of the 'OCTETSTRING' syntax. This is e.g. required when using the 'objectGUID' attribute of Active Directory for the user ID's. 
+| Set this to true if the defined 'ID' attribute for users is of the 'OCTETSTRING' syntax. This is e.g. required when using the 'objectGUID' attribute of Active Directory for the user ID's.
+
 |===
