--- a/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.adoc
+++ b/docs/services/general-info/env-var-deltas/4.0.0-5.0.0-added.adoc
@@ -8,9 +8,18 @@
 |===
 | Service| Variable| Description| Default
 
-| Available in multiple services
+| xref:deployment/services/env-vars-special-scope.adoc[Special Scope Envvars]
 | `OCIS_CACHE_DISABLE_PERSISTENCE`
 | Disables persistence of the cache. Only applies when store type 'nats-js-kv' is configured.| `false`
+|
+| `MICRO_REGISTRY` (important change)
+| The Go micro registry type to use. Supported types are: 'memory', 'nats-js-kv' (default) and 'kubernetes'. Note that 'nats', 'etcd', 'consul' and 'mdns' are deprecated and will be removed in a later version. Only change on supervision of ownCloud Support.| nats-js-kv
+|
+| `MICRO_REGISTRY_AUTH_PASSWORD`
+| Optional when using nats to authenticate with the nats cluster.|
+|
+| `MICRO_REGISTRY_AUTH_USERNAME`
+| Optional when using nats to authenticate with the nats cluster.|
 
 | xref:{s-path}/antivirus.adoc[antivirus]
 | `OCIS_EVENTS_AUTH_USERNAME`
